--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,10 +8,21 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: mkdir build
-    - run: g++ server.cpp -o build/server.exe -lpthread
+    - run: g++ server.cpp -o build/server.exe
     - run: g++ tests_server.cpp -o build/tests_server.exe
     - run: build/tests_server.exe
     - run: build/tests_server.exe "Kitel Boris"
     - run: build/tests_server.exe 3425
 
-
+  test_connection:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - run: mkdir build
+    - run: g++ server.cpp -o build/server.exe
+    - run: g++ client_plug.cpp -o build/client_plug.exe
+    - run: g++ tests_client_plug.cpp -o build/tests_client_plug.exe
+    - run: |
+           build/server.exe 50000 &
+           sleep 5
+           build/tests_client_plug.exe 50000
