--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,21 +8,28 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: mkdir build
-    - run: g++ server.cpp -o build/server.exe
-    - run: g++ tests_server.cpp -o build/tests_server.exe
-    - run: build/tests_server.exe
-    - run: build/tests_server.exe "Kitel Boris"
-    - run: build/tests_server.exe 3425
+    #- run: g++ server.cpp -o build/server.exe
+    #- run: g++ tests_server.cpp -o build/tests_server.exe
+    #- run: build/tests_server.exe
+    #- run: build/tests_server.exe "Kitel Boris"
+    #- run: build/tests_server.exe 3425
 
-  test_connection:
-    runs-on: ubuntu-latest
+  linux_build:
+    name: 'Linux Build'
+    runs-on: 'ubuntu-latest'
     steps:
-    - uses: actions/checkout@v2
-    - run: mkdir build
-    - run: g++ server.cpp -o build/server.exe
-    - run: g++ client_plug.cpp -o build/client_plug.exe
-    - run: g++ tests_client_plug.cpp -o build/tests_client_plug.exe
-    - run: |
-           build/server.exe 50000 &
-           sleep 5
-           build/tests_client_plug.exe 50000
+      - uses: actions/checkout@v2
+      - name: Upgrade cmake
+        run: |
+          sudo mv /usr/local/bin/cmake /usr/local/bin/cmake-old
+          wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | sudo apt-key add -
+          sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main'
+          sudo apt-get update && sudo apt-get install -y cmake
+          cmake --version
+      - name: 'Build application'
+        run: |
+          cmake --version
+          cmake -S . -B build
+          cmake --build build
+      - name: 'Test application'
+        run: build/bin/server "Kitel Boris"
