--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,3 +28,31 @@ jobs:
           build/bin/server 50000 &
           sleep 5
           build/bin/tests_client_plug 50000
+
+  windows_tests:
+    name: 'Windows tests'
+    runs-on: 'windows-latest'
+    steps:
+      - uses: actions/checkout@v1
+      - name: Install msys
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+        run: |
+          $msyspath="msys64"
+          choco install msys2 --params="/InstallDir:$msyspath /NoPath" -y
+          echo "::add-path::$msyspath\usr\bin"
+          echo "::add-path::$msyspath"
+          echo "::add-path::$msyspath\mingw64\bin"
+          echo "::add-path::$msyspath\mingw64\lib"
+          echo "::add-path::$msyspath\mingw64\include"
+      - name: Install gcc and gmp
+        run: |
+          pacman --noconfirm -Syu
+          pacman --noconfirm -S mingw-w64-x86_64-gcc mingw-w64-x86_64-gmp
+      - name: Build applications
+        run: |
+          cmake --version
+          cmake -S . -B build -G "MSYS Makefiles"
+          cmake --build build
+      - name: Run windows tests
+        run: build/bin/wintest.exe
