--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,2 +1,4 @@
-
+# NB!: Не отключаем сборку этой цели. На неё расчитывают тесты сборки.
 add_executable(server server.cpp)
+
+# Впрочем, если вы считаете необходимым, то можете что-то добавить.
