--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,9 @@
+
+### NB!: Скорее всего вам тут править нечего, но попробовать можно.
+#        Этот файл просто разделяет тесты на платформоспецифичные
+#        Скорее всего вам нужно править CMakeLists.txt в каталогах ниже
+
+
 #####################################
 #                                   #
 #            WIN32 TESTS            #
