--- a/tests/win32/CMakeLists.txt
+++ b/tests/win32/CMakeLists.txt
@@ -3,6 +3,10 @@ link_libraries(wsock32 ws2_32)
 
 ################################################################################
 
+# Файл можно править по своему усмотрению.
+# Это инструкции для сборки ваших тестов на винде
 
-add_executable(wintest wintest.cpp)
+### Пример цесли сборки тестового исполнимого файла
+#
+# add_executable(wintest wintest.cpp)
 
