--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,12 @@ add_subdirectory(tests)
 
 ################################
 #                              #
-#            SERVER            #
+#            POSIX             #
 #                              #
 ################################
 
 if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux") # <= Тут ничего не торгать
+
     # Изменить поддиректорию строчкой ниже в соответствии с заданием
     add_subdirectory(server)
 endif()
@@ -43,7 +44,7 @@ endif()
 
 ################################
 #                              #
-#            CLIENT            #
+#            WIN32             #
 #                              #
 ################################
 
