--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_subdirectory(tests)
 #                              #
 ################################
 
-if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux") # <= Тут ничего не торгать
+if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux") #           <= Тут ничего не торгать
 
     # Изменить поддиректорию строчкой ниже в соответствии с заданием
     add_subdirectory(server)
@@ -35,10 +35,7 @@ endif()
 
 
 
-
-
 ################################################################################
-
 
 
 
@@ -48,9 +45,12 @@ endif()
 #                              #
 ################################
 
-if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows") # <= Тут ничего не трогать
+if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows") #         <= Тут ничего не трогать
+
     # NB: Библиотека линкуется автоматитчески для всех целей ниже
+    # Не трогать.
     link_libraries(wsock32 ws2_32)
+
 
     # Изменить поддиректорию строчкой ниже в соответствии с заданием
     add_subdirectory(client)
